--- a/android/assets/jsons/Translations/Units,Promotions.json
+++ b/android/assets/jsons/Translations/Units,Promotions.json
@@ -1471,5 +1471,16 @@
 		Simplified_Chinese:"狼群III级"
 	}
 
+	"Wolfpack III":{
+		Italian:"Attacco in massa III"
+		German:"Rudeltaktik III"
+		French:"Meute III"
+		Russian:"Массовая атака III"
+		Simplified_Chinese:"狼群III级"
+	}
+	
+	"Heal Instantly":{}
+	"Heal this Unit by 50 HP; Doing so will consume this opportunity to choose a Promotion":{}
+
 
 }
