Added Declaration of Friendship logic
@ninjatao - I changed your BorderConflict into a DiplomacyFlag, and so all the logic of "removing every turn and deleting if 0" is built-in =)

--- a/android/assets/jsons/Translations/Other.json
+++ b/android/assets/jsons/Translations/Other.json
@@ -2793,6 +2793,10 @@
 		French:"Nos problèmes militaires communs nous ont rapprochés"
 	}
 	
+	"We have signed a public declaration of friendship":{}
+	"You have declared friendship with our enemies!":{}
+	"You have declared friendship with our allies":{}
+	
 ////// Overview screen
 
 	"Overview":{	
