--- a/android/assets/jsons/Translations/Other.json
+++ b/android/assets/jsons/Translations/Other.json
@@ -47,12 +47,12 @@
 /////// Turn
 
 	"Next turn":{
-        Dutch:"Volgende beurt"
-        French:"Prochain tour"
+        	Dutch:"Volgende beurt"
+        	French:"Prochain tour"
 		German:"Nächste Runde"
-		Italian:"Prossimo turno"
-        Japanese:"次のターン"
-        Portuguese:"Proximo turno"
+		Italian:"Fine turno"
+        	Japanese:"次のターン"
+        	Portuguese:"Proximo turno"
 		Romanian:"Runda următoare"
 		Russian:"Следующий ход"
 		Simplified_Chinese:"下一回合"
@@ -61,15 +61,15 @@
 	}
 	
 	"Turn":{ // For main screen at top left, e.g. Turn 234
-        Dutch:"Beurt"
+        	Dutch:"Beurt"
 		French:"Tour"
 		German:"Runde"
-        Italian:"Turno"
+        	Italian:"Turno"
 		Japanese:"順番"
-        Portuguese:"Turno"
+        	Portuguese:"Turno"
 		Romanian:"Runda"
-        Russian:"Ход"
-        Simplified_Chinese:"回合"
+        	Russian:"Ход"
+        	Simplified_Chinese:"回合"
 		Spanish:"Turno"
 	}
 
@@ -1039,7 +1039,7 @@
 
 	"In resistance for another [numberOfTurns] turns":{ //It's when city get captured
 		Italian:"La resistenza durerà per altri [numberOfTurns] turni"
-        Simplified_Chinese:"抵抗将持续额外[numberOfTurns]回合"
+        	Simplified_Chinese:"抵抗将持续额外[numberOfTurns]回合"
 		Portuguese:"A resistência durará por outros [numberOfTurns] turnos"
 		Japanese:"他の[numberOfTurns]ターンに抵抗"
 		French:"En révolte pour [numberOfTurns] tours"
@@ -1375,7 +1375,7 @@
 	}
 	
 	"Captured":{ // Shown in the battle table when attacking a civilian unit or a defeated city
-		Italian:"Catturato"
+		Italian:"Cattura"
 		Russian:"Захвачен"
 		French:"Capturé"
 		Romanian:"Capturat"
@@ -1387,7 +1387,7 @@
 	}
 	
 	"Attack":{
-		Italian:"Attacco"
+		Italian:"Attacca"
 		Russian:"Атака"
 		French:"Attaque"
 		Romanian:"Atac"
@@ -1598,7 +1598,7 @@
 	"Bonus for land units in 2 radius 15%" :{
 		Italian:"15% Bonus per le unità terrestri nel raggio di 2 caselle"
 		Simplified_Chinese:"周围两格地块内的我方所有陆军单位+15%战斗力"
-        French:"Bonus de combat +15% pour les unités terrestres dans un rayon de 2 cases"
+        	French:"Bonus de combat +15% pour les unités terrestres dans un rayon de 2 cases"
 	}
 
 	// for unit action button
@@ -2733,9 +2733,15 @@
 	
 	
 	// Friendship declaration flavor texts
-	"Declare Friendship ([numberOfTurns] turns)":{}
-	"May our nations forever remain united!":{}
-	"Indeed!":{}
+	"Declare Friendship ([numberOfTurns] turns)":{
+		Italian:"Dichiarazione di Amicizia ([numberOfTurns] turni)"
+	}
+	"May our nations forever remain united!":{
+		Italian:"Possano le nostre nazioni rimanere per sempre unite!"
+	}
+	"Indeed!":{
+		Italian:"Perfetto!"
+	}
 	
 	// Relationship states, from worst (Unforgivable) to best (Ally)
 	
@@ -2797,15 +2803,23 @@
 	}
 
 	"Our mutual military struggle brings us closer together.":{
-		Italian:"I nostri nemici in comune ci hanno legati."
+		Italian:"I nostri nemici in comune ci hanno tenuti insieme."
 		French:"Nos problèmes militaires communs nous ont rapprochés"
 	}
 	
-	"We have signed a public declaration of friendship":{}
-	"You have declared friendship with our enemies!":{}
-	"You have declared friendship with our allies":{}
+	"We have signed a public declaration of friendship":{
+		Italian:"Abbiamo segnato una dichiarazione pubblica d'amicizia!"
+	}
+	"You have declared friendship with our enemies!":{
+		Italian:"Hai dichiarato un'amicizia con i nostri nemici!"
+	}
+	"You have declared friendship with our allies":{
+		Italian:"Hai dichiarato un'amicizia con i nostri alleati."
+	}
 	
-	"Our open borders have brought us closer together.":{}
+	"Our open borders have brought us closer together.":{
+		Italian:"I nostri accordi di passaggio hanno avvicinato le nostre nazioni."
+	}
 	
 ////// Overview screen
 
@@ -3186,7 +3200,7 @@
 	"Cost":{
 		Italian:"Costo"
 		Simplified_Chinese:"花费"
-        French:"Côte"
+        	French:"Côte"
 	}
 
 	"Requires [buildingName] to be built in the city":{
@@ -3214,21 +3228,25 @@
 	}
 
 	"Wonder is being built elsewhere":{
+		Italian:"Meraviglia in costruzione altrove"
 		Simplified_Chinese:"正在其他城市建造该奇观"
-        French:"Cette merveille est déjà en construction ailleurs"
+        	French:"Cette merveille est déjà en construction ailleurs"
 	}
 
 	"Requires a [buildingName] in all cities":{
+		Italian:"Richiede [buildingName] in tutte le città"
 		Simplified_Chinese:"需要所有城市建有[buildingName]"
         French:"Nécessite un(e) [buildingName] dans toutes les villes"
 	}
 
 	"Requires a [buildingName] in this city":{
+		Italian:"Richiede [buildingName] nella città"
 		Simplified_Chinese:"需要城市建有[buildingName]"
         French:"Nécessite un(e) [buildingName] dans cette ville"
 	}
 
 	"Requires [resource]":{
+		Italian:"Richiede [resource]"
 		Simplified_Chinese:"需要资源：[resource]"
         French:"[resource] requis(e)"
 	}
