all chinese font can be show well

--- a/android/assets/jsons/Translations/Buildings.json
+++ b/android/assets/jsons/Translations/Buildings.json
@@ -807,6 +807,10 @@
 		German:"Bank"
 	}
 	
+	"Hanse":{	
+		Simplified_Chinese:"汉萨会馆"
+	}
+
 	"Forbidden Palace":{	
 		Italian:"Palazzo Proibito"
 		Russian:"Запретный дворец"
